# MBA

./: .gitignore  Aula_1.ipynb  README.md  pyproject.toml  test_libs_installed.py
Aula 3/: 04-Análise de Correlação e Regressão_vsColab.ipynb
Aula_1/: 01_AED - Cadastro_colab.ipynb  Aula_1.ipynb  SWEETVIZ_REPORT.html
Aula_2/: 01_AED - Cadastro_colab.ipynb  02_Nocoes_Probabilidade_colab.ipynb  03_Amostra_Teste_IC_colab.ipynb
Aula_2/Data/: Cartola_FC2018.xlsx  sal_lab1.xlsx
Aula_3/Data/: Arquivo_Valorizacao_Ambiental.xlsx
