[tool.poetry]
name = "data-science-base"
version = "0.1.0"
description = "Base environment for Data Science and Applied Statistics"
authors = ["Johann Pires"]
package-mode = false

[tool.ruff]
exclude = ["*.ipynb"]

[tool.poetry.dependencies]
python = "^3.11"

# Core

pandas = "^2.2"
numpy = "^1.26"

# Estatística

scipy = "^1.11"
statsmodels = "^0.14"
sweetviz = "^2.0"

# Machine Learning

scikit-learn = "^1.4"

# Visualização

matplotlib = "^3.8"
seaborn = "^0.13"

# Notebooks

jupyterlab = "^4.0"

# Performance

polars = "^0.20"

# Dev
python-dotenv = "^1.0"
pytest = "^7.0"
openpyxl = "^3.1.5"
pytest-cov = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.3"
ipykernel = "^6.29"
